logo fix on mobile

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ ul {
 }
 
 .logo {
-    width: 70%; 
+    width: 45%; 
     padding: 0%;
     padding-top: 4.5%;
     padding-left: 10%;
